# web

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  run.json
.github/workflows/: cmake-build-multiplatform.yml
scripts/: build-run.sh  configure-cmake.sh  install.sh
src/: Connection.cpp  Connection.h  Utils.cpp  Utils.h  Web.cpp
